bk_ida/gobmkida/c0/store_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/store_persistent_reading_cache/src/engine/persistent.c:876:9: error: use of undeclared identifier 'reading_cache'
sizeof( reading_cache)); 
        ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/store_persistent_reading_cache/src/engine/persistent.c:879:14: error: expected identifier or '('
struct entry = &persistent_reading_cache[persistent_reading_cache_size]; 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/store_persistent_reading_cache/src/obj/1/persistent.o] Error 1
